dev/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wil
  namespace: dev
  labels:
    app: wil    # Add labels to match service selector
spec:
  containers:
  - name: wil-v1
    image: wil42/playground:v2
    ports: 
    - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: wil
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: wil
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-ingress    # Changed name to be unique
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil
            port:
              number: 8888
