dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: wilpod
    http:
      paths:
      - path: /wil
        pathType: Prefix
        backend:
          service:
            name: wil
            port:
              number: 8888
